# AuraLite-Horror-Game

./: .gitignore  CMakeLists.txt  PROJECT_REVIEW_RU.md  README.md  build_android.bat  build_windows.bat
.github/workflows/: build.yml
android/: README.md  build.gradle  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/horror/: MainActivity.kt
android/app/src/main/res/values/: styles.xml
docs/: GAMEPLAY_UPGRADE.md  GRAPHICS_UPGRADE.md  IMPROVEMENTS.md  LOCALIZATION.md  NEW_CONCEPT.md  OPEN_WORLD_UPDATE.md
lang/: en.lang  es.lang  ru.lang
src/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  game.cpp  game.hpp  localization.cpp  localization.hpp  main.cpp  math3d.hpp  procedural.cpp  procedural.hpp  renderer.cpp  renderer.hpp  save_system.cpp  save_system.hpp  settings_system.cpp  settings_system.hpp  ui.cpp  ui.hpp
